plugins {
    id 'java'
    id 'org.xbib.gradle.plugin.jflex' version '1.2.0'
    id 'org.xbib.gradle.plugin.jacc' version '1.1.3'
}

group 'decaf'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_12

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/commons-cli/commons-cli
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.6'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
}

jar {
    manifest {
        attributes 'Main-Class': 'decaf.Main'
    }

    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}

javadoc {
    // Ignore the auto-generated file, because their javadoc comments may be out-dated (e.g. jflex <tt>).
    source = sourceSets.main.allJava.filter { !it.toString().contains('generated-src') }

    options.source('12')
    // NOTE: the first '-' is added by Gradle and thus ignored.
    // See https://github.com/gradle/gradle/issues/2354
    options.addBooleanOption('-enable-preview', true)
    options.showFromPrivate()
}

task pg(type: Exec) {
    workingDir '.'
    commandLine 'java',  '-jar', 'll1-pg.jar', 'src/main/ll1/Decaf.spec',
                'src/main/java/decaf/frontend/parsing/'
}